# sidecar-search

./: .gitignore  README.md  environment.yml  pyproject.toml
recipe/: meta.yaml
sidecar_search/: args.py  args_base.py  build.py  cli.py  conftest.py  dump.py  index.py
sidecar_search/dump/: cli.py  database.py  dataset.py  parquet_utils.py
sidecar_search/index/: args.py  cli.py  make.py  parameters.py  provisioner.py
sidecar_search/index/clean/: cli.py
sidecar_search/index/fill/: cli.py
sidecar_search/index/train/: cli.py  memmap.py
sidecar_search/index/tune/: cli.py  ground_truth.py
sidecar_search/index/utils/: datasets_utils.py  faiss_utils.py
sidecar_search/utils/: cache_utils.py  contextmanager_utils.py  env_utils.py  gpu_utils.py  table_utils.py
sidecar_search/utils/tests/: test_env_utils.py  test_gpu_utils.py
